Fixing close icon alignment

--- a/src/app/shared/components/side-nav/side-nav-mobile/side-nav-mobile.component.scss
+++ b/src/app/shared/components/side-nav/side-nav-mobile/side-nav-mobile.component.scss
@@ -31,8 +31,6 @@
             transform: scale(var(--ggs,1));
             width: 22px;
             height: 22px;
-            border: 2px solid transparent;
-            border-radius: 40px
         }
         .gg-close::after,
         .gg-close::before {
